--- a/package.json
+++ b/package.json
@@ -16,10 +16,28 @@
   "bugs": {
     "url": "https://github.com/CrispCode/symmetry/issues"
   },
+  "dependencies": {
+    "three": "0.159.0"
+  },
   "devDependencies": {
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+
+    "@babel/core": "^7.23.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/register": "^7.22.15",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "raw-loader": "^4.0.2",
+    "copy-webpack-plugin": "^11.0.0",
+    "webpack": "^5.89.0",
+    "webpack-dev-server":"^4.13.3"
   },
   "scripts": {
-    "start": ""
-  }
+    "start": "node ./client/scripts/start.js",
+    "build": "node ./client/scripts/build.js"
+  },
+  "type": "module"
 }
